move some notifications to a channel that can be muted or notifications turned off - les spam!

--- a/packages/alarm_bypass.yaml
+++ b/packages/alarm_bypass.yaml
@@ -60,7 +60,7 @@ automation:
                 type: mrkdwn
                 text: >
                   Setting alarm bypass on main bed room window
-        target: ["#alerts"]
+        target: ["#logs"]
         message: >
           Setting alarm bypass on main bed room window
     - service: envisalink.alarm_keypress
